test/negative/feature_unicodeinput.joos

public class A {
  final String x = "ᚪᚾᛁᛣᚩᛞᛖ";
}

